PR middle-end/36447 * simplify-rtx.c (simplify_subreg): Add check for shift count greater than size.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@136602 138bc75d-0d04-0410-961f-82ee72b054a4